--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>org.example</groupId>
     <artifactId>Leitrechner</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
