--- a/LRWebapplication/package.json
+++ b/LRWebapplication/package.json
@@ -14,6 +14,7 @@
     "connect-livereload": "^0.6.1",
     "express": "^4.18.1",
     "livereload": "^0.9.3",
+    "mysql": "^2.18.1",
     "pug": "^3.0.2",
     "pug-cli": "^1.0.0-alpha6"
   },
