--- a/LRWebapplication/package.json
+++ b/LRWebapplication/package.json
@@ -5,21 +5,33 @@
   "scripts": {
     "dev": "nodemon src/index.js --ext *",
     "start": "node ./bin/www",
-    "watch": "nodemon --ignore public"
+    "watch": "nodemon --ignore public",
+    "devwp": "webpack",
+    "build": "webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "acorn": "^8.7.1",
+    "browserify": "^17.0.0",
+    "buffer": "^6.0.3",
     "connect-livereload": "^0.6.1",
+    "emailjs-mime-parser": "^2.0.7",
     "express": "^4.18.1",
+    "fs": "0.0.1-security",
     "livereload": "^0.9.3",
     "mysql": "^2.18.1",
+    "path": "^0.12.7",
     "pug": "^3.0.2",
-    "pug-cli": "^1.0.0-alpha6"
+    "pug-cli": "^1.0.0-alpha6",
+    "stream": "0.0.2",
+    "util": "^0.12.4",
+    "webpack": "^5.72.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "webpack-cli": "^4.9.2"
   },
   "description": ""
 }
