--- a/LRWebapplication/package.json
+++ b/LRWebapplication/package.json
@@ -11,14 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "depcheck": "^1.4.3",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
-    "pug": "^3.0.2",
-    "pug-cli": "^1.0.0-alpha6"
+    "pug": "^3.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "depcheck": "^1.4.3",
+    "nodemon": "^2.0.16",
+    "pug-cli": "^1.0.0-alpha6"
   },
   "description": ""
 }
